--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,11 @@ on:
   schedule:
     - cron: 15 6 * * 0
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
 
 jobs:
   BUILD: 
@@ -26,6 +31,48 @@ jobs:
         run: |
           echo "Repository ${{ github.repository }} contains:"
           tree 
+  test:
+    runs-on: [ubuntu-latest]
+    needs: BUILD
+    if: github.event_name == 'workflow_dispatch'
+    environment: Test
+    steps:
+      - run: "Testing...."
+      
+  load-test:
+    runs-on: [ubuntu-latest]
+    needs: BUILD
+    if: github.event_name == 'workflow_dispatch'
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "Testing..."
+          sleep 14
+
+  production:
+    runs-on: ubuntu-latest
+    needs: [test, load-test]
+    environment: 
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1 deploying ..."
+          sleep 10
+      - run: |
+         echo "Step 2 deploying ..."
+         sleep 10
+      - run: |
+          echo "Step 3 deploying ..."
+          sleep 10
+      - run: |
+          echo "Step 4 deploying ..."
+          sleep 10
+      - run: |
+          echo "Step 5 deploying ..."
+          sleep 10
+    
       
     
     
